Added ability to set ticketCount
TicketCount plus some css

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,10 @@
 	float: right;
 	margin-top: 5px;
 }
+.space-right{
+margin-right: 10px
+}
+
+.form-inline .form-control{
+	max-width: 80px!important;
+}
